# dia

./: Cargo.toml  README.md
docs/: aliases.js  index.html  search-index.js  settings.html  source-files.js
docs/ansi_rgb/: struct.WithBackground.html  struct.WithForeground.html
docs/breast/: all.html  fn.build.html  fn.grow.html  fn.init.html  fn.input.html  fn.main.html  fn.render.html  fn.save.html  index.html  sidebar-items.js  struct.Parameters.html
docs/calc/: all.html  fn.build.html  fn.grow.html  fn.init.html  fn.input.html  fn.main.html  fn.save.html  fn.simulate.html  index.html  sidebar-items.js  struct.Parameters.html
docs/colored/: enum.Color.html  struct.ColoredString.html  struct.Style.html
docs/console/: enum.Alignment.html  enum.Attribute.html  enum.Color.html  enum.Key.html  enum.TermFamily.html  enum.TermTarget.html  struct.AnsiCodeIterator.html  struct.Emoji.html  struct.Style.html  struct.StyledObject.html  struct.Term.html  struct.TermFeatures.html
docs/dia/: all.html  index.html  macro.access.html  macro.args.html  macro.clone.html  macro.columns!.html  macro.columns.html  macro.display_field.html  macro.display_field_ln.html  macro.map.html  macro.pause.html  macro.report.html  macro.report_list.html  sidebar-items.js
docs/formula/: all.html  fn.build.html  fn.init.html  fn.input.html  fn.main.html  fn.save.html  fn.simulate.html  index.html  sidebar-items.js  struct.Parameters.html
docs/indicatif/: struct.MultiProgress.html  struct.ProgressBar.html  struct.ProgressBarWrap.html  struct.ProgressStyle.html
docs/inflate/: struct.DeflateDecoder.html  struct.DeflateDecoderBuf.html  struct.InflateWriter.html
docs/itertools/: all.html  enum.Diff.html  enum.Either.html  enum.EitherOrBoth.html  enum.FoldWhile.html  enum.MinMaxResult.html  enum.Position.html  fn.all.html  fn.any.html  fn.assert_equal.html  fn.chain.html  fn.cloned.html  fn.enumerate.html  fn.equal.html  fn.fold.html  fn.interleave.html  fn.iterate.html  fn.max.html  fn.merge.html  fn.min.html  fn.partition.html  fn.put_back.html  fn.repeat_call.html  fn.rev.html  fn.unfold.html  fn.zip.html  index.html  macro.iproduct.html  macro.izip.html  trait.Itertools.html
docs/json5/: enum.Error.html
docs/main/: all.html  fn.main.html  index.html  sidebar-items.js  struct.Testy.html
docs/mcrt/: all.html  fn.build.html  fn.grow.html  fn.init.html  fn.input.html  fn.main.html  fn.render.html  fn.save.html  fn.simulate.html  index.html  struct.Parameters.html
docs/midly/: all.html  enum.ErrorKind.html  enum.EventKind.html  enum.Format.html  enum.Fps.html  enum.MetaMessage.html  enum.MidiMessage.html  enum.Timing.html  index.html  struct.Error.html  struct.Event.html  struct.Header.html  struct.Smf.html  struct.SmpteTime.html  struct.TrackIter.html  trait.TrackRepr.html
docs/nalgebra/: struct.Complex.html  trait.ComplexField.html  trait.Field.html  trait.RealField.html
docs/ndarray/: struct.ArrayBase.html  struct.Dim.html  struct.Zip.html
docs/ndarray_parallel/: struct.Parallel.html
docs/netcdf/: all.html  fn.append.html  fn.create.html  fn.open.html  index.html  sidebar-items.js
legacy/: field.rs  parameters.json  player.rs  render.rs  report.rs  sample.rs  slice.rs
src/: lib.rs
src/error/: mod.rs
(+9036 files in other folders)
