[package]
authors = ["Freddy Wordingham <fjmw201@exeter.ac.uk>"]
name = "dia"
version = "0.0.0"
description = "Do it alone"
repository = "https://github.com/FreddyWordingham/dia"
readme = "README.md"
license = "license.txt"
keywords = ["physics", "mcrt", "ode", "diffusion", "rt"]
categories = ["science", "simulation"]
edition = "2018"
default-run = "main"

[dependencies]
attr = { path = "res/crates/attr" }
proc = { path = "res/crates/proc" }

colored = "1.9.3"
indicatif = "0.14.0"
json5 = "0.2.7"
serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0.51"
terminal_size = "0.1.11"

[profile.dev]
# Development profile: "cargo build".
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 16
panic = 'unwind'
incremental = true
overflow-checks = true

[profile.release]
# Release profile: "cargo build --release"
opt-level = 3
debug = false
rpath = false
lto = false
debug-assertions = false
codegen-units = 16
panic = 'unwind'
incremental = false
overflow-checks = false

[profile.test]
# Testing profile: "cargo test"
opt-level = 0
debug = 2
rpath = false
lto = false
debug-assertions = true
codegen-units = 16
incremental = true
overflow-checks = true

[profile.bench]
# Benchmark profile: "cargo bench" (and "cargo test --release)".
opt-level = 3
debug = false
rpath = false
lto = false
debug-assertions = false
codegen-units = 16
incremental = false
overflow-checks = false
